syntax = "proto3";

option go_package = "/proto-gen";

package proto_gen;

import "google/protobuf/timestamp.proto";

message Session {
  string id = 1;
  int64 user_id = 2;
  string user_name = 3;
  string browser_id = 4;
}

message Header {
  Session session = 1;
  string transaction_id = 2;
  string uuid = 3;
}

message Result {
  int64 status_code = 1;
  string status = 2;
  string cause = 3;
}

message User {
  int64 id = 1;
  string state = 2;
  google.protobuf.Timestamp stated_at = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;

  Authentication authentication = 6;
  Profile profile = 7;
}

message Authentication {
  int64 user_id = 1;
  string user_name = 2;
  string email = 3;
}

message Profile {
  int64 user_id = 1;
  int64 file_id = 2;
  string description = 3;
}

message DeviceInfo {
  string device_id = 1;
  string browser_id = 2;
  string user_agent = 3;
  string operation_system = 4;
  string platform = 5;
}

message File {
  int64 id = 1;
  string type = 2;
  int64 topic_id = 3;
  int64 from_user_id = 4;
  string write_name = 5;
  string name = 6;
  string path = 7;
  string mime = 8;
  int64 size = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message Message {
  int64 id = 1;
  string message_type = 2;
  string client_uuid = 3;
  int64 from_user_id = 4;
  string from_user_name = 5;
  int64 topic_id = 6;
  int64 file_id = 7;
  int64 sequence_id = 8;
  string content = 9;
  bytes custom = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message Topic {
  int64 id = 1;
  string state = 2;
  google.protobuf.Timestamp stated_at = 3;
  string name = 4;
  int64 owner = 5;
  bool private = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;

  repeated Message messages = 9;
  repeated User users = 10;
}

message Notification {
  int64 id = 1;
  string type = 2;
  int64 request_user_id = 3;
  int64 receive_user_id = 4;
  int64 topic_id = 5;
  int64 sequence_id = 6;
  bool is_received = 7;
  bool is_read = 8;
  bytes custom = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message Paging {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp updated_at = 2;
}

enum MessageType {
  SEND = 0;
  CTRL = 1;
  ACK = 2;
  READ = 3;
  MENTION = 4;
  REPLY = 5;
}